--- a/src/app/core/auth/forget-password/forget-password.component.html
+++ b/src/app/core/auth/forget-password/forget-password.component.html
@@ -1,21 +1,42 @@
 <div class="container">
-  <h2>
-    <span>Forget Password</span>
-  </h2>
-    <form  class="form-container" [formGroup]="forgetPasswordForm" (ngSubmit)="onSubmit()">
-    <div class="mb-3">
+  <div class="modal-header">
+    <h4 class="modal-title pull-left">{{title}}</h4>
+    <button type="button" class="btn-close close pull-right" aria-label="Close" (click)="bsModalRef.hide()">
+      <span aria-hidden="true" class="visually-hidden">&times;</span>
+    </button>
+  </div>
+  <div class="modal-body">
+    <form class="form-container" [formGroup]="forgetPasswordForm" (ngSubmit)="onSubmit()">
+      <div class="mb-3">
         <input type="email" class="form-control" placeholder="Enter email" formControlName="email">
-    </div>
+      </div>
+      <div class="alert alert-danger" *ngIf="email.invalid && (email.dirty || email.touched)">
+        <small *ngIf="email.errors?.['required']">
+          email must be required
+        </small>
+        <small *ngIf="email.errors?.['email']">
+          not a valid email
+        </small>
+      </div>
 
-    <div class="mb-3">
+      <div class="mb-3">
         <input type="email" class="form-control" placeholder="enter new password" formControlName="newPassword">
-     </div>
-     
-  
-      <div class="button">
+      </div>
+    
+      <div class="alert alert-danger" *ngIf="newPassword.invalid && (newPassword.dirty || newPassword.touched)">
+        <small *ngIf="newPassword.errors?.['required']">
+          Password must be required
+        </small>
+        <small *ngIf="newPassword.errors?.['minlength']">
+          Password is greater then 5
+        </small>
+      </div>
+
+
+      <div class="modal-footer">
         <button type="submit" class="btn btn-primary">Forget Password</button>
-        <a (click)="gotoLogin()"> go to login page</a>
+
       </div>
     </form>
-  
+
   </div>
