--- a/src/app/core/auth/forget-password/forget-password.component.scss
+++ b/src/app/core/auth/forget-password/forget-password.component.scss
@@ -1,5 +1,4 @@
-
-
+/* 
 .container{
     display: flex;
     justify-content: center;
@@ -35,4 +34,4 @@
 .registration{
    margin-top: 20px;
    margin-left: 350px;
-}
+} */
