--- a/src/app/core/shared/header/header.component.html
+++ b/src/app/core/shared/header/header.component.html
@@ -1,11 +1,12 @@
 <header class="navbar navbar-dark sticky-top bg-dark flex-md-nowrap p-0 shadow">
     <a class="navbar-brand col-md-3 col-lg-2 me-0 px-3" href="#">MyHotelBooking</a>
-    <button class="navbar-toggler position-absolute d-md-none collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#sidebarMenu" aria-controls="sidebarMenu" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="navbar-nav">
-      <div class="nav-item text-nowrap">
-        <a class="nav-link px-3" [routerLink]="['auth']">Sign out</a>
-      </div>
+   
+   <div class="right-nav">
+    <div class="profile">
+      <p class="nav-link " style="color:lightgray;">Raj Singh</p>
     </div>
+    <div class="nav-item text-nowrap">
+      <a class="nav-link px-3" style="color:lightgray;" [routerLink]="['auth']">Sign out</a>
+    </div>    
+   </div>
   </header>
