--- a/src/app/core/layouts/dashboard-layout/dashboard-layout.component.html
+++ b/src/app/core/layouts/dashboard-layout/dashboard-layout.component.html
@@ -2,12 +2,8 @@
 <div class="containers">
     <app-header></app-header>
 
-    <!-- <main>
-        <app-sidebar></app-sidebar>
-    </main> -->
-
     <div class="display-area">
-        <app-dashboard></app-dashboard>
+        <router-outlet></router-outlet>
     </div>
 
     
