--- a/src/app/core/shared/header/header.component.scss
+++ b/src/app/core/shared/header/header.component.scss
@@ -1,16 +1,45 @@
-.right-nav{
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    gap: 15px;
-    padding-right: 30px;
-}
-.profile{
-    margin-top: 15px;
+.nav-right{
+    margin-right: 100px;
 }
 
-.right-nav a{
-    border: 1px solid lightgray;
-    border-radius: 5px;
+.collapse ul li a{
+    color: #1b8ed9;
+    // padding: 1rem 1rem 0.5rem;
 }
+
+
+.nav-item.active{
+    color: #1b8ed9;
+    font-weight: 700;
+    border-bottom: 2px solid #00b6f0;
+} 
+
+.button{
+    display: flex;
+    gap: 15px;
+}
+
+.login-btn{
+    color: #1b8ed9;
+    border:0.75px solid #0385e5;
+    border-radius: 3px;
+    padding:  .5rem 1.3rem;
+
+};
+.login-btn:hover{
+    color: #fff;
+    background-color: #0385e5;
+}
+
+.signup-btn{
+    background-color: #0385e5;
+    color: white;
+    padding: .6rem 1.5rem;
+    border: none;
+    border-radius: 3px;
+};
+.signup-btn:hover{
+    background-color: #fff;
+    color: #1b8ed9;
+    border:0.75px solid #0385e5;
+};
