--- a/src/app/core/dashboard/dashboard.component.scss
+++ b/src/app/core/dashboard/dashboard.component.scss
@@ -1,13 +1,87 @@
-.bd-placeholder-img {
-    font-size: 1.125rem;
-    text-anchor: middle;
-    -webkit-user-select: none;
-    -moz-user-select: none;
-    user-select: none;
-  }
+// Section-1
+.hero{
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.left{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width:50%;
+  height: 450px;
+  background-color: #1b8ed9; 
+}
+.right{
+  width: 50%;
+ 
+}
+.right .images{
+  width: 100%;
+  height: 450px;
+}
 
-  @media (min-width: 768px) {
-    .bd-placeholder-img-lg {
-      font-size: 3.5rem;
-    }
-  }
+.contents{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+  padding: 100px;
+  gap: 30px;
+}
+
+// section-2:About-us
+.about-us{
+  margin: 40px 40px;
+}
+
+.degree, .pc-user, .video-course {
+  background: #00b6f0;
+  border-radius: 6px;
+  padding: 24px;
+  height: 190px;
+  align-items: center;
+  display: flex;
+}
+
+.degree {
+    background: #0385e5;
+}
+.video-course {
+  background: #ffc542;
+}
+
+
+
+.tutors .seo-h2 {
+font-size: 32px;
+color: #00b6f0;
+font-weight: 400;
+}
+
+.courses h2, .tutors h2 {
+  color: #00b6f0;
+  font-size: 38px;
+  font-weight: 600;
+}
+.courses h2,.courses .seo-h2{
+  color:#ffc542 ;
+}
+
+.students h2, .students .seo-h2{
+  color: #0385e5;
+}
+
+.about-us p{
+  text-align: justify;
+};
+
+.program-categories{
+  width: 100%;
+  background-color: #00b6f0;
+  padding: 50px 0;
+  color: #fff;
+}
+
