--- a/src/app/core/shared/header/header.component.html
+++ b/src/app/core/shared/header/header.component.html
@@ -33,19 +33,19 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
-            <li routerlinkactive="active" class="nav-item" >
+            <li routerLinkActive="active" class="nav-item"  [routerLinkActiveOptions]="{exact:true}">
               <a class="nav-link" aria-current="page" [routerLink]="['']">HOME</a>
             </li>
-            <li routerlinkactive="active" class="nav-item" >
+            <li routerLinkActive="active" class="nav-item" >
               <a class="nav-link px-3" [routerLink]="['programs']">PROGRAMS</a>
             </li>
-            <li routerlinkactive="active" class="nav-item" >
+            <li routerLinkActive="active" class="nav-item" >
               <a class="nav-link px-3" [routerLink]="['trainers']">TRAINERS</a>
             </li>
-            <li routerlinkactive="active" class="nav-item" >
+            <li routerLinkActive="active" class="nav-item" >
               <a class="nav-link px-3" [routerLink]="['jobs']">JOBS</a>
             </li>
-            <li routerlinkactive="active" class="nav-item" >
+            <li routerLinkActive="active" class="nav-item" >
               <a class="nav-link px-3"  [routerLink]="['blogs']">BLOGS</a>
             </li>
             <li class="nav-item button">            
