--- a/src/app/core/shared/header/header.component.scss
+++ b/src/app/core/shared/header/header.component.scss
@@ -8,7 +8,7 @@
 }
 
 
-.nav-item.active{
+.active{
     color: #1b8ed9;
     font-weight: 700;
     border-bottom: 2px solid #00b6f0;
@@ -17,6 +17,7 @@
 .button{
     display: flex;
     gap: 15px;
+    margin-left: 20px;
 }
 
 .login-btn{
