--- a/src/app/core/shared/header/header.component.scss
+++ b/src/app/core/shared/header/header.component.scss
@@ -1,6 +1,6 @@
-// .nav{
-// padding-top: 15px;
-// }
+.navbar{
+    background-color: #fff;
+}
 .nav-right{
     // margin-right: 100px;
     padding-bottom: 10px;
