--- a/src/app/core/dashboard/dashboard.component.scss
+++ b/src/app/core/dashboard/dashboard.component.scss
@@ -1,5 +1,95 @@
-.carousel-indicators li {
-  height: 30px;
-  width: 30px;
-  border-radius: 50%;
+// Section-1
+.hero{
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.left{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width:50%;
+  height: 450px;
+  background-color: #1b8ed9; 
+}
+.right{
+  width: 50%;
+ 
+}
+.right .images{
+  width: 100%;
+  height: 450px;
+}
+
+.contents{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+  padding: 100px;
+  gap: 30px;
+}
+
+// section-2:About-us
+.about-us{
+  margin: 40px 40px;
+}
+
+.degree, .pc-user, .video-course {
+  background: #00b6f0;
+  border-radius: 6px;
+  padding: 24px;
+  height: 190px;
+  align-items: center;
+  display: flex;
+}
+
+.degree {
+    background: #0385e5;
+}
+.video-course {
+  background: #ffc542;
+}
+
+
+
+.tutors .seo-h2 {
+font-size: 32px;
+color: #00b6f0;
+font-weight: 400;
+}
+
+.courses h2, .tutors h2 {
+  color: #00b6f0;
+  font-size: 38px;
+  font-weight: 600;
+}
+.courses h2,.courses .seo-h2{
+  color:#ffc542 ;
+}
+
+.students h2, .students .seo-h2{
+  color: #0385e5;
+}
+
+.about-us p{
+  text-align: justify;
+};
+
+
+
+// section-2:
+.program-categories{
+  width: 100%;
+  background-color: #00b6f0;
+  padding: 50px 0;
+  color: #fff;
+}
+.programs{
+  margin:0px 25px;
+}
+.program-categories-slider{
+  
 }
