--- a/src/app/core/shared/header/header.component.html
+++ b/src/app/core/shared/header/header.component.html
@@ -1,11 +1,11 @@
- <header class="navbar navbar-dark sticky-top flex-md-nowrap p-0 shadow nav">
+ <header class="navbar  sticky-top  nav">
     <a class="navbar-brand col-md-3 col-lg-2 me-0 px-3" href="#">
       <img class="image" src="../../../../assets/images/logo.png" alt="logo">
     </a>
    
    <div class="right-nav">
     <nav class="navbar navbar-expand-lg nav-right">
-      <div class="container-fluid">       
+      <div class="">       
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -35,7 +35,6 @@
         </div>
       </div>
     </nav>
-
    </div>
   </header> 
 
