--- a/src/app/core/dashboard/dashboard.component.scss
+++ b/src/app/core/dashboard/dashboard.component.scss
@@ -92,4 +92,14 @@ font-weight: 400;
 }
 .program-categories-slider{
   
+};
+
+
+
+.lead{
+   margin-left: 30px;
+};
+
+.all{
+margin-left:160px ;
 }
