--- a/src/app/core/dashboard/dashboard.component.scss
+++ b/src/app/core/dashboard/dashboard.component.scss
@@ -1,3 +1,5 @@
+
+
 // Section-1
 .hero{
   width: 100%;
@@ -78,10 +80,185 @@ font-weight: 400;
   text-align: justify;
 };
 
+
+
+// section-3:programs
 .program-categories{
   width: 100%;
   background-color: #00b6f0;
   padding: 50px 0;
   color: #fff;
 }
+.programs{
+  margin:0px 25px;
+}
+.program-categories-slider{
+  margin-bottom: 80px;
+};
 
+
+
+.category{
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+ gap: 20px;
+ margin-bottom: 80px;
+ 
+};
+
+.programList-left{
+  width:50%;
+};
+
+.programList-right{
+  width: 50%;
+  background-color: #fff;
+  padding: 50px;
+  border-radius: 10px;
+}
+.programList-right .images{
+  width: 100%;
+
+ 
+};
+.program-list{
+  width: 100%;
+  display: flex;
+}
+
+.btn-list{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  text-decoration: none;
+  font-size: 22px;
+  font-weight:300;
+  border-bottom: 1px solid #ffffff80;
+  padding: 20px 20px 30px 40px;
+  margin-right: 40px;
+  margin-top: 30px
+};
+.programList-left a{
+  color: white;
+  text-decoration: none;
+};
+
+// .activeList{
+// background: #ffc542;
+// border-radius: 50px;
+// border:none;
+// color: #fff;
+// font-weight: 700;
+// font-size: 24px;
+// };
+
+.program-type{
+  position: relative;
+}
+.btn{
+  padding: 7px 16px;
+  font-size: 20px;
+  color: #fff;
+  font-weight: 500;
+  background-color: #00b6f0;
+  border:none;
+  position: absolute;
+  right: 16px;
+  bottom: -18px;
+};
+
+.short-desc h2, h3, h4,h5, p{
+  color: #222222
+};
+.short-desc p{
+ color: #626262;
+}
+
+.Recorded{
+  display: flex;
+  gap: 10px;
+  flex-direction: row;
+  justify-content:flex-start;
+  align-items: center;
+  margin-top: 50px;
+  margin-bottom: 25px
+};
+.Recorded h5{
+  padding-top: 10px;
+  font-size: 16px;
+}
+.circle{
+  width: 12px;
+  height: 12px;
+  background-color: #ed2626e2;
+  border-radius: 50%;
+};
+
+.goal{
+
+};
+.goal h2{
+  font-size: 24px;
+  font-weight: 600;
+}
+
+
+.time{
+  display: flex;
+  flex-direction: row;
+  justify-content:flex-start;
+  align-items: center;
+  gap: 20px;
+};
+.time p{
+ color: #626262;
+ font-size: 20px;
+    font-weight: 400;
+ padding-top: 15px;
+}
+
+.price{
+  display: flex;
+  gap: 10px;
+};
+
+.price .discount-fees{
+  color: #00b6f0;
+  font-size: 24px;
+  font-weight:600;
+};
+.price .fees{
+  color: #626262;
+  font-size: 24px;
+  font-weight: 600;
+}
+
+
+.tutor{
+  background-color: #00b6f0;
+  color: white;
+  padding: 16px;
+  border-radius: 5px;
+  display: flex;
+  align-items: center;
+  gap: 20px;
+}
+
+.tutor-image img{
+  object-fit: cover;
+  width: 80px;
+  height: 80px;
+  border-radius: 3px;
+}
+.tutor-details .name{
+ color: white;
+ font-size: 20px;
+margin-bottom: -1px;
+};
+.tutor-details .exp{
+  color: white;
+  font-size: 14px;
+
+}
