--- a/src/app/core/trainers/trainers.component.html
+++ b/src/app/core/trainers/trainers.component.html
@@ -24,9 +24,9 @@
                 </div>
             </div>
         </div>
-        <div class="row text-center">
+        <div class="row text-center view-more">
             <div class="col-xl-12 col-lg-12">
-                <button type="button" class="btn btn-primary register-now" (click)="onNextPageClick()"> View more</button>
+                <button *ngIf="currentPage < pageLimit" type="button" class="btn btn-primary register-now" (click)="onNextPageClick()"> View more</button>
             </div>
         </div>
     </div>
