--- a/src/app/core/jobs/jobs.component.html
+++ b/src/app/core/jobs/jobs.component.html
@@ -1,1 +1,45 @@
-<p>jobs works!</p>
+<section class="pt-5 job">
+    <div class="container">
+        <div class="row">
+            <div class="col-xl-12 col-lg-12">
+                <h2 class="title-h2 mb-4 pb-2">Jobs</h2>
+            </div>
+        </div>
+        <form [formGroup]="JobSearch_Form" (ngSubmit)="FormSubmit(JobSearch_Form)">
+        <div class="row">
+            <div class="col-xl-5 col-lg-6 col-md-6">
+                <div class="input-group mb-3">
+                    <div class="input-group-prepend">
+                        <img src="../../../assets/images/search.png" alt="search">
+                    </div>
+                    <input class="form-control form-control-lg" type="text" placeholder="Search by title"
+                        formControlName="title"    (input)="getJobByTitle($event)">
+                </div>
+            </div>
+            <div class="col-xl-5 col-lg-6 col-md-6">
+                <div class="input-group mb-3">
+                    <div class="input-group-prepend">
+                        <img src="../../../assets/images/location.png" alt="location">
+                    </div>
+                    <select class="form-select form-select-lg mb-3 city-select" aria-label=".form-select-lg example"
+                        formControlName="city"    (input)="getJobByCity($event)"
+                    >
+                        <option value="" selected>City</option>
+                        <option [value]="city" *ngFor="let city of cities">{{city}}</option>
+                    </select>
+                </div>
+            </div>
+            <div class="col-xl-2">
+                <button type="submit" class="btn btn-primary job-btn">Search</button>
+            </div>
+        </div>
+    </form>
+        <div class="row">
+            <div class="col-xl-12">
+                <h2 *ngIf="isSubmitted">{{title}} jobs in {{city}}</h2>
+                <p> The Job You Are Searching For Is Not Found. </p>
+            </div>
+           
+        </div>
+    </div>
+</section>
