--- a/src/app/core/blogs/blogs.component.html
+++ b/src/app/core/blogs/blogs.component.html
@@ -15,7 +15,8 @@
                     <h4>{{blogs.seo_title}}</h4>
                     <p class="text-justify">{{blogs.short_desc}}...</p>
                     <span class="badge badge-pill badge-info mt-4 text-uppercase"></span>
-                    <a class="float-right mt-4 pt-2 read-more-text">Read more</a>
+                    <a class="float-right mt-4 pt-2 read-more-text" [routerLink]="['/blogs', blogs.slug]">Read more</a>
+                    <!-- <button clbuttonss="float-right mt-4 pt-2 read-more-text" (click)="readMore(blogs.slug)">Read more</button> -->
                 </div>
             </div>
         </div>
