--- a/src/app/core/jobs/jobs.component.html
+++ b/src/app/core/jobs/jobs.component.html
@@ -5,7 +5,7 @@
                 <h2 class="title-h2 mb-4 pb-2">Jobs</h2>
             </div>
         </div>
-        <form [formGroup]="JobSearch_Form" (ngSubmit)="FormSubmit()">
+        <form [formGroup]="JobSearch_Form" (ngSubmit)="FormSubmit(JobSearch_Form)">
         <div class="row">
             <div class="col-xl-5 col-lg-6 col-md-6">
                 <div class="input-group mb-3">
